# openagentic-sdk

./: .gitignore  .pre-commit-config.yaml  COMPACTION.md  OPENAI_RESPONSES_IMPLEMENTATION.md  OPENCODE_PARITY_AUDIT.md  PROJECT_REPORT.md  README.md  README.zh_cn.md  SKILLS_AND_TOOLS_GUIDE.md  SKILL_SYSTEM_LIFECYCLE.md  pyproject.toml  ruff.toml
docs/: publishing.md
e2e_tests/: README.md  __init__.py  _harness.py  e2e_hooks.py  e2e_include_partial_messages.py  e2e_permissions_callback.py  e2e_quickstart.py  e2e_sdk_mcp_tools.py  e2e_task_subagent.py  e2e_tool_loop_filesystem.py
example/: 01_run_basic.py  02_query_streaming.py  03_query_messages_basic.py  04_client_conversation.py  05_resume_session.py  06_tool_read.py  07_tool_write.py  08_tool_edit.py  09_tool_bash.py  10_tool_glob_grep.py  11_permissions_prompt_interactive.py  12_permissions_prompt_noninteractive.py  13_permissions_callback.py  14_hooks_rewrite_tool_input.py  15_hooks_block_tool.py  16_slash_command.py  17_skill_list_load_activate.py  18_task_subagent.py  19_mcp_sdk_tool.py  20_inspect_session_log.py  21_web_fetch_summarize.py  22_web_search_then_fetch_report.py  23_web_search_domain_filters.py  24_notebook_edit_research_report.py  25_notebook_edit_tutorial_builder.py  26_ask_user_question_onboarding.py  27_todo_write_create_list.py  28_todo_write_iterate_status.py  29_research_to_todos.py  30_project_onboarding_notes.py  31_generate_changelog_from_git.py  32_triage_build_error_and_fix.py  33_web_fetch_json_extract.py  34_web_fetch_compare_and_write.py  35_file_refactor_with_checks.py  (+34 more)
(+338 files in other folders)
