[project]
name = "open-agent-sdk"
version = "0.0.0"
description = "Open-source agent SDK (pure Python)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["open_agent_sdk*"]
