[project]
name = "open-agent-sdk"
version = "0.0.0"
description = "Open-source agent SDK (pure Python)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
oa = "open_agent_cli.__main__:main"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["open_agent_sdk*", "open_agent_cli*"]

[tool.setuptools.package-data]
open_agent_sdk = ["tool_prompts/*.txt"]
